examples/test/testpolicy18364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18364
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key49: value24
      key7: value42
      key11: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value13
          key47: value38
          key46: value10
      podSelector:
        matchLabels:
          key45: value46
          key12: value42
